--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,22 +1,22 @@
-body {
+.body {
 	text-align: center;
 	background-color: #EB6E80;
 	color: #F8EEE7;
 	font: 25px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
+.a {
   color: #00B7FF;
 }
 
 
 .spacer{
-	margin-left: 22.5px;
+	margin-left: 15px;
 	padding-top: 25px;
 }
 
 .calculate {
-	width: 25%;
+	width: 360px;
 	height: 400px;;
 	border: 3px solid black;
 	border-radius: 10px;
@@ -27,19 +27,20 @@ a {
 }
 
 .result {
-	width: 62.5%;
+	width: 62%;
 	height: 50px;
 	float:left;
 	border: 3px solid black;
 	border-radius: 10px;
 	display: inline;
-	margin: auto;
+	margin: 0px 0px 0px 30px;
 	background-color: white;
 	/*margin-top: 20px;*/
 	margin-bottom: 15px;
 	font-size: 40px;
 	text-align: right;
 	padding-right: 10px;
+	color: black;
 }
 
 .button {
@@ -53,13 +54,12 @@ a {
 	border-radius: 50%;
 }
 
-
 .cbutton {
 	margin: auto;
 	margin-left:15px;
 	float: left;
-	height: 45px;
-	width:60px;
+	height: 50px;
+	width:65px;
 	display:inline;
 	font-size: 30px;
 	color: #D5D5D5;
@@ -67,18 +67,21 @@ a {
 	border: 3px solid black;
 	border-radius: 50%;
 	text-decoration: none;
-	padding-top: 5px;
 }
 
 button:hover {
     background-color: #062F4F;
 }
 
-h1 {
+.heading {
 	border-bottom: 5px solid black;
+	font-size: 50px;
+	margin-top: 30px;
 }
 
-.result > p {
-  /* margin-left: 10px; */
+.title {
+	font-size: 30px;
+	margin-top: 30px;
 }
+
 
